--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
+    "postinstall": "puppeteer install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
